--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ header {
 .options {
   flex: 1;
   max-width: 200px;
+  height: 500px;
   /* background-color: #fff; */
   padding: 1rem;
   border: 2px solid #ccc;
@@ -46,11 +47,14 @@ header {
 
 /* Drawing grid */
 .grid {
-  flex: 3;
+  flex: 1;
+  display: grid;
+  width: 500px;
+  height: 500px;
   /* background-color: white; */
-  border: 2px solid #ccc;
+  border: 2px solid black;
   border-radius: 10px;
-  min-height: 400px; /* Temporary height before JS adds content */
+  /* min-height: 400px; Temporary height before JS adds content */
 }
 
 /* Footer Styling */
