--- a/style.css
+++ b/style.css
@@ -37,12 +37,27 @@ header {
 /* Sidebar options */
 .options {
   flex: 1;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   max-width: 200px;
   height: 500px;
   /* background-color: #fff; */
   padding: 1rem;
   border: 2px solid #ccc;
   border-radius: 10px;
+}
+
+/* Button styles */
+.options > button {
+    width: 100%;
+    padding: 20px;
+    background-color: lightblue;
+    border: 2px;
+    border-radius: 4px;
+    font-weight: bold;
+    text-align: center;
+    margin: 10px 0px;
 }
 
 /* Drawing grid */
