--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ header {
 
 /* Sidebar options */
 .options {
+  display: flex;
   flex: 1;
   flex-direction: column;
   align-items: center;
@@ -53,6 +54,17 @@ header {
     width: 100%;
     padding: 20px;
     background-color: lightblue;
+    border: 2px;
+    border-radius: 4px;
+    font-weight: bold;
+    text-align: center;
+    margin: 10px 0px;
+}
+
+.options > #clear-grid {
+    width: 50%;
+    padding: 7px;
+    background-color: #B6D0E2;
     border: 2px;
     border-radius: 4px;
     font-weight: bold;
