Added the slider for adjusting the grid size in increments of 4

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ header {
 /* Button styles */
 .options > button {
     width: 100%;
-    padding: 20px;
+    padding: 15px;
     background-color: lightblue;
     border: 2px;
     border-radius: 4px;
@@ -70,6 +70,57 @@ header {
     font-weight: bold;
     text-align: center;
     margin: 10px 0px;
+}
+
+/* Styling for the slider */
+.slide-container {
+  width: 100%; /* Width of the outside container */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.slider {
+  /* -webkit-appearance: none; */
+  width: 100%;
+  height: 15px;
+  border-radius: 5px;  
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%; 
+  background: #04AA6D;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  background: #04AA6D;
+  cursor: pointer;
+}
+
+/* Styling for the update grid button */
+#update-grid {
+    width: 50%;
+    padding: 7px;
+    background-color: #6F8FAF;
+    border: 2px;
+    border-radius: 4px;
+    font-weight: bold;
+    text-align: center;
+    margin: 10px auto;
 }
 
 /* Drawing grid */
