--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ header {
   /* background-color: #fff; */
   padding: 1rem;
   border: 2px solid #ccc;
-  border-radius: 10px;
+  /* border-radius: 10px; */
 }
 
 /* Button styles */
@@ -130,8 +130,8 @@ header {
   width: 500px;
   height: 500px;
   /* background-color: white; */
-  border: 2px solid black;
-  border-radius: 10px;
+  border: 2px solid #ccc;
+  /* border-radius: 10px; */
   /* min-height: 400px; Temporary height before JS adds content */
 }
 
