Added functionality for eraser and pen toggling with color shifts to indicate which button is selected

--- a/style.css
+++ b/style.css
@@ -61,6 +61,10 @@ header {
     margin: 10px 0px;
 }
 
+.options > #pen {
+    background-color: green;
+}
+
 .options > #clear-grid {
     width: 50%;
     padding: 7px;
